--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.24.1",
+    "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.13",
     "next-themes": "^0.2.1",
+    "node-html-markdown": "^1.3.0",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
