--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.13",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "node-html-markdown": "^1.3.0",
     "openai": "^4.28.4",
@@ -43,12 +44,16 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-twc": "^1.4.1",
+    "rehype-prism-plus": "^2.0.0",
+    "sass": "^1.71.1",
     "sonner": "^1.4.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
