--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.341.0",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.13",
